# dev

./: .ansible-lint  .gitattributes  .gitignore  LICENSE  TO-DO.txt  ansible.cfg  config.toml  default.config.yml  inventory  main.yml  post_install.py  pyproject.toml  requirements.txt  setup.ps1  setup.py  todo.md  utils.py
files/: .gitconfig  .zimrc  .zshenv  .zshrc  Media Keys.ahk  Microsoft.PowerShell_profile.ps1  hyper-v.bat  oh-my-posh.lua  zoxide.lua  zsh-ish.omp.json  zsh-ish.omp.json.bak
files/backups/: fonts_old.yml  oh-my-posh.lua  zoxide.lua  zsh-ish.omp.json
src/Chocolatey/: Chocolatey.ps1
src/Fonts/: Fonts.ps1
src/WSL/: .zshrc  WSL.ps1  custom-actions.sh
src/WorkspaceFolder/: WorkspaceFolder.ps1
tasks/: cmd_config.yml  explorer.yml  fixtures.yml  fonts.yml  power_plan.yml  ps_config.yml  start_menu.yml  windows_features.yml  wsl2.yml
