[project]
name = "dev"
version = "0.1.0"
description = "Dev Setup Config"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["rich"]

[dependency-groups]
dev = ["pyright", "ruff"]

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]